discord-frontend/hartex-discord-commands-test/tests/ui/unexpected_end_of_input1.stderr
error: unexpected end of input, expected identifier
  --> tests/ui/unexpected_end_of_input1.rs:25:1
   |
25 | #[metadata()]
   | ^^^^^^^^^^^^^ in this procedural macro expansion
   |
  ::: $WORKSPACE/hartex-discord-commands-macros/src/lib.rs
   |
   | pub fn metadata(tokens: TokenStream, item: TokenStream) -> TokenStream {
   | ---------------------------------------------------------------------- in this expansion of `#[metadata]`
